Fix styling and layout issues

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -94,3 +94,9 @@
   display: none;
 }
 
+.availability-buttons{
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  
+}
