--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -10,7 +10,7 @@
   background-size: cover;
   background-position: center;
   background-image: url(https://www.splitshire.com/wp-content/uploads/2015/03/SplitShire-8098-1800x1200.jpg); 
-  min-height: 100vh;
+  min-height: calc(120vh - 56px);
   
 } 
 
